--- a/productos.html
+++ b/productos.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="productos.html">Productos</a></li>
         <li><a href="publicaciones.html">Publicaciones</a></li>
+        <li><a href="ventas.html">Ventas</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="configuracion.html">Configuración</a></li>
       </ul>
@@ -38,6 +39,12 @@
         <label>Subir foto del producto:
           <input type="file" accept="image/*">
         </label>
+        
+        <label>Subir archivo Excel (.xlsx) para carga masiva:
+          <input type="file" accept=".xlsx">
+        </label>
+        <small>Subí un archivo Excel con los productos para agregarlos en masa.</small>
+
         <button type="submit">Agregar producto</button>
       </form>
     </section>
