--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="productos.html">Productos</a></li>
         <li><a href="publicaciones.html">Publicaciones</a></li>
+        <li><a href="ventas.html">Ventas</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="configuracion.html">Configuración</a></li>
       </ul>
